# mail_lib

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
common/: Cargo.toml
common/src/: credentials.rs  lib.rs
common/src/email_address/: mod.rs  validation.rs
mail_build/: Cargo.toml
mail_build/src/message/header/: mod.rs
mail_lib/: Cargo.toml
mail_lib/src/: lib.rs
mail_lib_macros/: Cargo.toml
mail_lib_macros/src/: lib.rs
mail_lib_macros/src/macros/: email_address.rs  mod.rs
mail_lib_types/: Cargo.toml  README.md
mail_lib_types/benches/: email_address.rs  mailbox.rs  random_rfc.rs
mail_lib_types/src/: credentials.rs  lib.rs  mail_box.rs
mail_lib_types/src/email_address/: mod.rs  validation.rs
mail_lib_types/src/parsers/: base.rs  mail_box.rs  mod.rs
mail_lib_types/src/parsers/rfcs/: mod.rs  rfc2234.rs  rfc2822.rs  rfc5234.rs  rfc5322.rs
mail_lib_types/tests/: address_tests.rs  mailbox_tests.rs
mail_lib_types/tests/data/: data_types.rs  invalid_emails.json  valid_emails.json  valid_mailboxes.json
smtp_lib/: Cargo.toml
smtp_lib/src/: error.rs  lib.rs  server_response.rs  smtp_client.rs  smtp_server.rs  statement.rs
smtp_lib/src/commands/: ehlo.rs  mod.rs
smtp_lib/src/commands/command_impls/: ehlo.rs  mod.rs
smtp_lib/tests/: test_client.rs  test_server.rs
src/: lib.rs
