[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace =true, optional = true}
impl-tools = {workspace =true}
thiserror = {workspace =true}
zeroize = {version = "1", features=["derive"], optional = true}
strum = {workspace =true}
base64 = {workspace =true}
rkyv = {workspace =true, optional = true}
enum_helper ={workspace =true}
[dev-dependencies]
serde_json = {version = "1"}
[features]
default = ["serde", "zeroize"]
