[package]
name = "mail_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
mail_lib_types = { path = "../mail_lib_types" }
mail_build = { path = "../mail_build" }
smtp_lib = { path = "../smtp_lib" }

[features]
full = []
async = ["smtp_lib/async"]
