[package]
name = "mail_lib_macros"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
strum = { workspace = true }

[features]
default = ["types_macros"]
types_macros = []
