[package]
name = "mail_lib_types"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, optional = true }
impl-tools = { workspace = true }
thiserror = { workspace = true }
zeroize = { version = "1", features = ["derive"], optional = true }
strum = { workspace = true }
base64 = { workspace = true }
rkyv = { workspace = true, optional = true }
chumsky = { version = "0.10", default-features = false, features = ["std"] }
either = "1"
enum_helper.workspace = true
tracing = { workspace = true, optional = true }
digestible = { workspace = true }
mail_lib_macros = { path = "../mail_lib_macros" }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chumsky = { version = "0.10",  features = [
    "std",
] }
[dev-dependencies]
serde = { version = "1" }
serde_json = { version = "1" }
pretty_assertions = { version = "1" }
criterion = { version = "0.5", features = ["html_reports"] }
[features]
default = ["serde", "zeroize", "rkyv"]

[[bench]]
name = "email_address"
harness = false
[[bench]]
name = "mailbox"
harness = false
