[package]
name = "smtp_lib"
description = "A Generic SMTP Library"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mail_lib_types = { path = "../mail_lib_types" }
thiserror = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
strum = { workspace = true }
enum_helper = { workspace = true }
auto_impl = { workspace = true }
[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["async"]
async = []
